@@ -70,4 +70,6 @@ public final class PreferenceConstants {
 
     public static final String LOAD_SETTINGS_ON_DEMAND = "loadSettingsOnDemand";
 
+    public static final String RESOLVE_ON_STARTUP = "resolveOnStartup";
+
 }
